--- a/config/database.yml
+++ b/config/database.yml
@@ -23,7 +23,7 @@ default: &default
 
 development:
   <<: *default
-  database: rails-postgres_development
+  database: react-rails-event_development
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
@@ -57,7 +57,7 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: rails-postgres_test
+  database: react-rails-event_test
 
 # As with config/secrets.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -80,6 +80,6 @@ test:
 #
 production:
   <<: *default
-  database: rails-postgres_production
-  username: rails-postgres
+  database: react-rails-event_production
+  username: react-rails-event
   password: <%= ENV['RAILS-POSTGRES_DATABASE_PASSWORD'] %>
