--- a/config/newrelic.yml
+++ b/config/newrelic.yml
@@ -14,7 +14,7 @@ common: &default_settings
 
   # Your application name. Renaming here affects where data displays in New
   # Relic.  For more details, see https://docs.newrelic.com/docs/apm/new-relic-apm/maintenance/renaming-applications
-  app_name: rails-postgres
+  app_name: react-rails-event
 
   # To disable the agent regardless of other settings, uncomment the following:
   # agent_enabled: false
@@ -28,7 +28,7 @@ common: &default_settings
 # If your application has other named environments, configure them here.
 development:
   <<: *default_settings
-  app_name: rails-postgres (Development)
+  app_name: react-rails-event (Development)
 
   # NOTE: There is substantial overhead when running in developer mode.
   # Do not use for production or load testing.
@@ -42,7 +42,7 @@ test:
 
 staging:
   <<: *default_settings
-  app_name: rails-postgres (Staging)
+  app_name: react-rails-event (Staging)
 
 production:
   <<: *default_settings
